Progress on completing sections

--- a/background.tex
+++ b/background.tex
@@ -109,10 +109,11 @@ with the drone that is connected to the Omega 2 over Wi-Fi. The Omega 2's role
 is to route packets between its Wi-Fi and LTE network interfaces, truly acting
 as just a communications relay.
 
+\begin{comment}
 \section{Background: SteelEagle Benchmarks}
 Bala et al performed experiments to measure the agility of the SteelEagle
 system. The experiment setup involves setting up a stationary drone in a lab
 setting, with its camera pointed at a display connected to the cloudlet, showing
 the current timestamp in milliseconds. The drone camera captures images of this
 timestamp and transmits them to the cloudlet through the SteelEagle pipeline.
-
+\end{comment}
