--- a/intro.tex
+++ b/intro.tex
@@ -145,6 +145,7 @@ The contributions of this thesis include
 
 
 \section{Organization}
+\begin{comment}
 The "Observe, Orient, Decide, Act" (OODA) loop framework devised by military
 strategist John R. Boyd provides a framework to structure our investigation
 into the end-to-end latency of SteelEagle. According to Boyd, decision-making
@@ -156,4 +157,4 @@ the North Korean MiG-15s during the Korean War \cite{morton1995}. A system with
 a tighter OODA loop corresponds to a more agile drone. Instead of measuring
 just the overall system latency, performing a break down of the latency across
 the OODA steps provides more insight into system latency bottlenecks.
-
+\end{comment}
