--- a/register.bib
+++ b/register.bib
@@ -472,3 +472,50 @@ isbn="978-3-319-16178-5"
   pages={1-7},
   keywords={Graphics processing units;Instruction sets;Arrays;Tools;Hardware;Registers},
   doi={10.1109/HPEC.2017.8091072}}
+
+@article{mcrae2019,
+title = {Using an Unmanned Aircraft System (Drone) to Conduct a Complex High Altitude Search and Rescue Operation: A Case Study},
+journal = {Wilderness \& Environmental Medicine},
+volume = {30},
+number = {3},
+pages = {287-290},
+year = {2019},
+issn = {1080-6032},
+doi = {https://doi.org/10.1016/j.wem.2019.03.004},
+url = {https://www.sciencedirect.com/science/article/pii/S1080603219300572},
+author = {Jake N. McRae and Christopher J. Gay and Brandon M. Nielsen and Andrew P. Hunt},
+keywords = {mountain rescue, unmanned aerial vehicle, first responder, wilderness medicine, SAR},
+abstract = {Unmanned aircraft systems, also known as unmanned aerial vehicles or drones, are becoming increasingly common consumer products; their potential applications to search and rescue operations are becoming ever more apparent. A consumer drone was used to locate a mountaineer after he and his climbing partner were separated while summiting Broad Peak in the Karakoram Mountains of northeastern Pakistan, the world's 12th highest summit. The use of a commercial drone in the search for the missing climber allowed for a quick rescue mission, eliminating the need for a fully mobilized rescue party while significantly reducing the risk to the climbers charged with rescuing him. Without the drone, the rescue party would have faced immense challenges, including a vast search area and altitudes near the limits of human physiologic function. With real-time imagery and global positioning system capabilities, drones may become an invaluable tool in search and rescue operations, helping to reduce response time and maintain the safety of responders at high altitude and in many other types of difficult terrain.}
+}
+@Article{gonzalez2016,
+AUTHOR = {Gonzalez, Luis F. and Montes, Glen A. and Puig, Eduard and Johnson, Sandra and Mengersen, Kerrie and Gaston, Kevin J.},
+TITLE = {Unmanned Aerial Vehicles (UAVs) and Artificial Intelligence Revolutionizing Wildlife Monitoring and Conservation},
+JOURNAL = {Sensors},
+VOLUME = {16},
+YEAR = {2016},
+NUMBER = {1},
+ARTICLE-NUMBER = {97},
+URL = {https://www.mdpi.com/1424-8220/16/1/97},
+PubMedID = {26784196},
+ISSN = {1424-8220},
+ABSTRACT = {Surveying threatened and invasive species to obtain accurate population estimates is an important but challenging task that requires a considerable investment in time and resources. Estimates using existing ground-based monitoring techniques, such as camera traps and surveys performed on foot, are known to be resource intensive, potentially inaccurate and imprecise, and difficult to validate. Recent developments in unmanned aerial vehicles (UAV), artificial intelligence and miniaturized thermal imaging systems represent a new opportunity for wildlife experts to inexpensively survey relatively large areas. The system presented in this paper includes thermal image acquisition as well as a video processing pipeline to perform object detection, classification and tracking of wildlife in forest or open areas. The system is tested on thermal video data from ground based and test flight footage, and is found to be able to detect all the target wildlife located in the surveyed area. The system is flexible in that the user can readily define the types of objects to classify and the object characteristics that should be considered during classification.},
+DOI = {10.3390/s16010097}
+}
+
+@misc{flyeye_bvlos,
+  title        = {Drone Acronym BVLOS: Beyond Visual Line of Sight},
+  author       = {Jacob Stoner},
+  year         = {2024},
+  month        = {June},
+  howpublished = {\url{https://www.flyeye.io/drone-acronym-bvlos/}},
+  note         = {Accessed: 2024-11-22}
+}
+
+@misc{faa_part107,
+  title        = {Small Unmanned Aircraft Systems (UAS) Regulations (Part 107)},
+  author       = {FAA},
+  year         = {2020},
+  month        = {October},
+  howpublished = {\url{https://www.faa.gov/newsroom/small-unmanned-aircraft-systems-uas-regulations-part-107}},
+  note         = {Accessed: 2024-11-22}
+}
